--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@debut/indicators": "^1.3.15",
     "dotenv": "^16.0.3",
-    "ethers": "^6.0.8"
+    "ethers": "^6.0.8",
+    "ws": "^8.13.0"
   }
 }
