--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@debut/indicators": "^1.3.15",
     "dotenv": "^16.0.3",
     "ethers": "^6.0.8",
+    "level": "^8.0.0",
     "ws": "^8.13.0"
   }
 }
