--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "app": "concurrently \"node app.js\" \"cd frontend && npm start\""
   },
   "dependencies": {
     "@debut/indicators": "^1.3.15",
+    "concurrently": "^8.0.1",
     "dotenv": "^16.0.3",
     "ethers": "^6.0.8",
     "level": "^8.0.0",
