frontend: Build in Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,2 +1,13 @@
 FROM nginx:alpine
-COPY build /usr/share/nginx/html
+
+ARG REACT_APP_WS_URL
+ARG REACT_APP_WS_PORT
+
+RUN apk add --update nodejs npm
+
+COPY . .
+
+RUN npm ci
+RUN npm run build
+
+RUN cp -r build/* /usr/share/nginx/html/
