--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "with-frontend": "WITH_FRONTEND=true node app.js"
   },
   "dependencies": {
     "@debut/indicators": "^1.3.15",
     "dotenv": "^16.0.3",
     "ethers": "^6.0.8",
+    "express": "^4.18.2",
     "level": "^8.0.0",
     "ws": "^8.13.0"
   },
