--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^6.0.8",
     "express": "^4.18.2",
+    "level": "^8.0.0",
     "mongodb": "^5.2.0",
     "ws": "^8.13.0"
   },
