--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "with-frontend": "WITH_FRONTEND=true node app.js"
+    "start": "node src/app.js",
+    "with-frontend": "WITH_FRONTEND=true node src/app.js"
   },
   "dependencies": {
     "@debut/indicators": "^1.3.15",
