--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "start": "node -r dotenv/config src/app.js",
     "with-frontend": "WITH_FRONTEND=true node -r dotenv/config src/app.js",
-    "aggregation": "node scripts/aggregation.js"
+    "aggregation": "node scripts/aggregation.js",
+    "migrate": "npx east --es-modules --migration-extension mjs migrate"
   },
   "dependencies": {
     "@debut/indicators": "^1.3.15",
@@ -18,6 +19,7 @@
     "node": ">=18.x"
   },
   "devDependencies": {
-    "csv": "^6.2.10"
+    "csv": "^6.2.10",
+    "east": "^2.0.3"
   }
 }
