--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
     "start": "node -r dotenv/config src/app.js",
     "with-frontend": "WITH_FRONTEND=true node -r dotenv/config src/app.js",
     "aggregate": "node scripts/aggregate.js",
+    "generate": "node scripts/generate_csv.js",
     "migrate": "npx east --es-modules --migration-extension mjs migrate"
   },
   "dependencies": {
