--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "migrate": "npx east --es-modules --migration-extension mjs migrate"
   },
   "dependencies": {
+    "@binance/connector": "^3.0.0-rc.2",
     "@debut/indicators": "^1.3.15",
     "dotenv": "^16.0.3",
     "ethers": "^6.0.8",
